--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -39,24 +39,7 @@ header{
     color: white;
     text-align: center;
 }
-.main-column-index{
-    float: left;
-    width: 33.3%;
-    padding: 10px;
-    margin-top: 100px;
-}
-.main-column {
-    float: left;
-    width: 49%;
-    padding: 10px;
-    margin-top: 50px;
-}
-.main-column2 {
-    float: left;
-    width: 49%;
-    padding: 10px;
-    margin-top: 50px;
-}
+
 .main-column3 {
     float: left;
     width: 50%;
@@ -93,7 +76,6 @@ header{
     position : relative;   
     width: 800px;
     height: auto;
-   /* margin-bottom: 0px;*/
     padding: 10px;
     font-size: 1em;
     border-radius: 25px;
@@ -105,6 +87,12 @@ header{
     border: 3px dotted white;
     padding: 10px;
 }
+.center1 {
+    margin: auto;
+    width: 100%;
+    border: 3px dotted white;
+    padding: 10px;
+}
 #quest-title{
     color: blue;
     text-align: center;
@@ -112,6 +100,11 @@ header{
 #quest-body{
     
 }
+/*#pro{
+  position: fixed;
+  left: 0;
+  top: 13%;
+  }*/
 .post_q{
         width: 350px;
         margin: auto;
@@ -226,4 +219,26 @@ span{
     width: auto;
     margin-top: 80px;
 
+}
+
+.column {
+    float: left;
+    width: 48.33%;
+    padding: 2px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
+}
+* {
+    box-sizing: border-box; /* lets last column appear inline*/
 }
