add functionality to view most answered question

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -42,7 +42,7 @@ header{
 
 .main-column3 {
     float: left;
-    width: 50%;
+    width: 100%;
     padding: 10px;
     margin-top: 0px;
 }
@@ -100,11 +100,7 @@ header{
 #quest-body{
     
 }
-/*#pro{
-  position: fixed;
-  left: 0;
-  top: 13%;
-  }*/
+
 .post_q{
         width: 350px;
         margin: auto;
@@ -168,48 +164,15 @@ input[type="submit"]:hover{
 table{
       float: left;
     }
-.card {
-    height: 470px;
-  }
-.top{
-    height: 55%;
-    border: 1px solid #ddd;
-    padding: 0px 16px;
-  }
-.name{
-    margin: 0px;
-  }
-.status{
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin-left: 4px;
-    border-radius: 5px;
-    background-color: #60D156;
-    }    
-.bottom{
-    border: 1px solid #ddd;
-    padding: 8px 16px;
-  }
-.profile-action {
-    display: block;
-    width: 100%;
-    height: 32px;
-    font-size: 1em;
-    text-align: left;
-    /* The border-radius property allows for round corners. */
-    border-radius: 4px;
-    border: 0px;
-    background-color: white;
-    }
-.profile-action:hover {
-    background-color: #00A5D2;
-    color: white;
-    }
+
 .img{
-    width:200px;
-    height:180px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
     }
+#pro{
+
+  }
 span{
     font-weight: bold;
     color: white;
@@ -238,7 +201,4 @@ span{
     .column {
         width: 100%;
     }
-}
-* {
-    box-sizing: border-box; /* lets last column appear inline*/
 }
