--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -81,12 +81,14 @@ header{
     font-size: 1em;
     border-radius: 25px;
     background-color: white;
+    cursor: pointer;
 }
 .center {
     margin: auto;
     width: 70%;
     border: 3px dotted white;
     padding: 10px;
+    overflow:auto;
 }
 .center1 {
     margin: auto;
@@ -116,6 +118,9 @@ header{
     font-size: 18px;
     font-weight: bold;
     color: white;
+    display: block;
+    float:left;
+    clear:both;
 }
 form{
     padding: 10px;
@@ -186,6 +191,12 @@ span{
     padding: 2px;
 }
 
+#content{
+    display: block;
+    float:left;
+    clear: right;
+    margin: 2%;
+}
 /* Clear floats after the columns */
 .row:after {
     content: "";
