--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -57,6 +57,7 @@ header{
     margin: auto;
     background: #7abcff;
     margin-top: 10px;
+    transform: translate(10%,20%);
     padding: 10px;
 }
 .wrap_q{
@@ -73,6 +74,15 @@ header{
     padding-bottom: 50px;
     float: left;
 }
+.wrap_q3{
+    margin: auto;
+    background: #7abcff;
+    transform: translate(10%,10%);
+    margin-top: 10px;
+    padding-bottom: 50px;
+    float: left;
+}
+
 .wrapT{
     position : relative;   
     width: 800px;
@@ -222,3 +232,22 @@ span{
 .textarea{
     float: left;
 }
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; 
+    animation: spin 2s linear infinite;
+  }
+  
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
